android: keep composer variant ordering API-26 safe